--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "silverstripe/framework": "^4 || ^5 || ^6",
-        "silverstripe/reports": "^4 || ^5 || ^6"
+        "silverstripe/framework": "^4 || ^5",
+        "silverstripe/reports": "^4 || ^5"
     },
     "autoload": {
         "psr-4": {
